# bevy_gpu_compute

./: Cargo.toml
assets/: compute.wgsl  render.wgsl
src/: main.rs
