[package]
name = "bevy_gpu_compute"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", branch = "main"}
bytemuck = "1.18.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
